--- a/src/TranslationToolWindow.form
+++ b/src/TranslationToolWindow.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="TranslationToolWindowFactory">
-  <grid id="3cc02" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="3cc02" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="264" y="190" width="223" height="25"/>
+      <xy x="264" y="190" width="223" height="71"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -14,6 +14,14 @@
         </constraints>
         <properties>
           <text value="Nie znaleziono plików tłumaczeń"/>
+        </properties>
+      </component>
+      <component id="56bb6" class="javax.swing.JButton" binding="Settings">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Button"/>
         </properties>
       </component>
     </children>
